Fix extra margin on Gecko at top

--- a/src/public/less/main.less
+++ b/src/public/less/main.less
@@ -42,7 +42,7 @@ a {
   }
 
   .topBarLinks {
-    margin-bottom: 0;
+    margin: 0 auto;
   }
 
   li {
